cropped image fixed

--- a/style.css
+++ b/style.css
@@ -1,137 +1,139 @@
 body {
-  background-color: rgb(0, 0, 0);
-  background-image: url(flora.jpg);
-  color: black;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  margin: 0px;
-  font-size: 100%;
+	background-color: rgb(0, 0, 0);
+	background-image: url(flora.jpg);
+	color: black;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	margin: 0px;
+	font-size: 100%;
 }
 
 a {
-  color: black;
-  background-color: transparent;
-  text-decoration: none;
+	color: black;
+	background-color: transparent;
+	text-decoration: none;
 }
 
 .primary {
-  display: flex;
+	display: flex;
 }
 
 .navbar {
-  display: flex;
-  flex-direction: row;
-  align-content: flex-start;
-  background-color: rgba(163, 223, 228, 1);
-  padding: 8px;
-  flex: 1;
-  height: 70px;
-  margin: 20px;
-  margin-bottom: 4px;
-  align-items: center;
-  box-sizing: border-box;
+	display: flex;
+	flex-direction: row;
+	align-content: flex-start;
+	background-color: rgba(163, 223, 228, 1);
+	padding: 8px;
+	flex: 1;
+	height: 70px;
+	margin: 20px;
+	margin-bottom: 4px;
+	align-items: center;
+	box-sizing: border-box;
 }
 
 .navbar > * {
-  margin-left: 15px;
+	margin-left: 15px;
 }
 
 .navbar-text {
-  margin: 0px;
-  margin-left: 15px;
-  color: rgba(255, 255, 255, 0.8);
-  font-size: 1.9vw;
-  font-weight: bold;
+	margin: 0px;
+	margin-left: 15px;
+	color: rgba(255, 255, 255, 0.8);
+	font-size: 1.9vw;
+	font-weight: bold;
 }
 
 header {
-  background-color: rgb(255, 255, 255, 1);
-  margin: 0;
-  width: 100%;
-  height: 55vh;
-  max-height: calc(100vh - 63px);
-  background-size: cover;
-  background-position: right top;
-  display: flex;
-  flex-direction: column;
-  box-shadow: rgba(0, 0, 0, 0.75) 0px -3px 60px -15px;
-  z-index: 1;
+	background-color: rgb(255, 255, 255, 1);
+	margin: 0;
+	width: 100%;
+	height: 55vh;
+	max-height: calc(100vh - 63px);
+	background-size: cover;
+	background-position: right top;
+	display: flex;
+	flex-direction: column;
+	box-shadow: rgba(0, 0, 0, 0.75) 0px -3px 60px -15px;
+	z-index: 1;
 }
 
 .center-box {
-  display: flex;
-  flex-direction: row;
-  background-color: rgba(163, 223, 228, 1);
-  color: aliceblue;
-  margin: 100px;
-  width: 55%;
-  margin-left: 22.5%;
-  margin-top: -230px;
-  box-shadow: rgba(0, 0, 0, 0.75) 0px -3px 60px -15px;
-  position: absolute;
-  z-index: 2;
+	display: flex;
+	flex-direction: row;
+	background-color: rgba(163, 223, 228, 1);
+	color: aliceblue;
+	width: 800px;
+	margin: 100px;
+	margin-top: -230px;
+	margin-left: 20%;
+	margin-right: 20%;
+	box-shadow: rgba(0, 0, 0, 0.75) 0px -3px 60px -15px;
+	position: absolute;
+	z-index: 2;
 }
 
 .profile-box {
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  width: 60%;
+	display: flex;
+	flex-direction: column;
+	padding: 20px;
+	width: 60%;
 }
 
 .button-box {
-  display: flex;
-  flex-direction: row;
-  align-self: flex-end;
-  background-color: transparent;
-  padding: 8px;
+	display: flex;
+	flex-direction: row;
+	align-self: flex-end;
+	background-color: transparent;
+	padding: 8px;
 }
 
 .button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  margin: 4px;
-  padding: 10px;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  background-color: white;
-  border: none;
-  cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 60px;
+	height: 60px;
+	border-radius: 50%;
+	margin: 4px;
+	padding: 10px;
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2),
+		0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	background-color: white;
+	border: none;
+	cursor: pointer;
 }
 
 .icon {
-  width: 60%;
+	width: 60%;
 }
 
 .text-box {
-  flex-grow: 1;
+	flex-grow: 1;
 }
 
 .image-box {
-  display: flex;
-  margin-right: 20px;
-  justify-content: center;
+	display: flex;
+	margin-right: 20px;
+	justify-content: center;
 }
 
 /* TODO: image size responsive */
 .image {
-  min-height: 392px;
-  min-width: 396px;
-  width: 100%;
-  align-self: center;
-  box-shadow: rgba(0, 0, 0, 0.75) 0px -3px 60px -15px;
+	min-height: 392px;
+	min-width: 396px;
+	width: 100%;
+	align-self: center;
+	box-shadow: rgba(0, 0, 0, 0.75) 0px -3px 60px -15px;
 }
 
 .footer {
-  background-color: rgba(0, 0, 0, 0.8);
-  width: 100%;
-  height: 45vh;
-  position: relative;
-  z-index: -1;
-  /* padding-top: 500px;
+	background-color: rgba(0, 0, 0, 0.8);
+	width: 100%;
+	height: 45vh;
+	position: relative;
+	z-index: -1;
+	/* padding-top: 500px;
   padding-bottom: 50px; */
 }
 
@@ -165,63 +167,63 @@ header {
   font-weight: bold;
 } */
 .wrapper {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 .secondary {
-  display: flex;
+	display: flex;
 }
 
 .right-column {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  min-width: 150px;
-  height: 100vh;
-  box-sizing: border-box;
-  margin: 8px;
-  margin-top: 4px;
-  margin-left: 4px;
-  justify-content: space-evenly;
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+	min-width: 150px;
+	height: 100vh;
+	box-sizing: border-box;
+	margin: 8px;
+	margin-top: 4px;
+	margin-left: 4px;
+	justify-content: space-evenly;
 }
 
 .experience {
-  display: flex;
-  background-color: rgba(72, 90, 107, 0.486);
-  /* height: 100vh; */
-  flex: 2;
-  margin: 8px;
-  margin-right: 4px;
-  margin-top: 4px;
-  box-sizing: border-box;
-  padding: 15px;
-  flex-direction: column;
-  justify-content: space-evenly;
+	display: flex;
+	background-color: rgba(72, 90, 107, 0.486);
+	/* height: 100vh; */
+	flex: 2;
+	margin: 8px;
+	margin-right: 4px;
+	margin-top: 4px;
+	box-sizing: border-box;
+	padding: 15px;
+	flex-direction: column;
+	justify-content: space-evenly;
 }
 
 .personal {
-  background-color: rgba(189, 159, 218, 0.678);
-  height: 300px;
-  flex: 1;
-  /* margin: 8px; */
-  margin-bottom: 4px;
+	background-color: rgba(189, 159, 218, 0.678);
+	height: 300px;
+	flex: 1;
+	/* margin: 8px; */
+	margin-bottom: 4px;
 }
 
 .education {
-  background-color: rgba(173, 222, 235, 0.747);
-  height: 300px;
-  flex: 1;
-  /* margin: 8px; */
-  margin-top: 4px;
+	background-color: rgba(173, 222, 235, 0.747);
+	height: 300px;
+	flex: 1;
+	/* margin: 8px; */
+	margin-top: 4px;
 }
 
 .cv-content {
-  background-color: rgba(255, 255, 255, 0.685);
-  color: black;
-  margin: 15px;
-  padding: 10px;
-  border: 2px rgba(255, 255, 255, 0.685);
-  border-radius: 5px;
-  box-shadow: rgba(0, 0, 0, 0.75) 0px -3px 60px -15px;
+	background-color: rgba(255, 255, 255, 0.685);
+	color: black;
+	margin: 15px;
+	padding: 10px;
+	border: 2px rgba(255, 255, 255, 0.685);
+	border-radius: 5px;
+	box-shadow: rgba(0, 0, 0, 0.75) 0px -3px 60px -15px;
 }
